--- a/HTML/redeem.html
+++ b/HTML/redeem.html
@@ -200,7 +200,7 @@
                 <tr>
                   <th>Name</th>
                   <th>Redeem Points</th>
-                  <th>Status</th>
+                  <th>Redeem</th>
                 </tr>
                 <tbody id="tbody1"></tbody>
                 
