--- a/HTML/pArchives.html
+++ b/HTML/pArchives.html
@@ -152,6 +152,11 @@
               <li><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
             </ul>
           </li>
+          <li >
+            <a href="#section12" id="graph">
+              <i class="fas fa-chart-line"></i> Statistics
+            </a>
+          </li>
           <li>
             <a href="#section12" id="reward">
               <i class="fas fa-gift"></i> Rewards
