--- a/HTML/rev_souvenir.html
+++ b/HTML/rev_souvenir.html
@@ -202,6 +202,11 @@ margin-top: 5px;
                   <li><a href="#section42" id="otop"><i class="fas fa-store" style="color: #184267;"></i> OTOP</a></li>
                 </ul>
               </li>
+              <li >
+                <a href="#section12" id="graph">
+                  <i class="fas fa-chart-line"></i> Statistics
+                </a>
+              </li>
               <li>
                 <a href="#section12" id="reward" >
                   <i class="fas fa-gift"style="color: #184267;"></i> Rewards
