--- a/HTML/oArchives.html
+++ b/HTML/oArchives.html
@@ -155,6 +155,11 @@
               <li class="active"><a href="#section42" id="otop"><i class="fas fa-store"></i> OTOP</a></li>
             </ul>
           </li>
+          <li >
+            <a href="#section12" id="graph">
+              <i class="fas fa-chart-line"></i> Statistics
+            </a>
+          </li>
           <li>
             <a href="#section12" id="reward">
               <i class="fas fa-gift"></i> Rewards
